# PiHue

./: .gitignore  CMakeLists.txt  EffectProcessor.h  HueConnector.cpp  HueConnector.h  README.md  WebcamFetcher.cpp  WebcamFetcher.h  main.cpp
jupyter_experiments/: ExtractingColors.ipynb  FindingTV.ipynb
